examples/stun-setters/crashers/8dc00598417d4eb788a77ac6ccef3cb484905d8b.output
panic: runtime error: index out of range

goroutine 1 [running]:
github.com/gortc/stun.(*ErrorCodeAttribute).GetFrom(0xc42000cfa0, 0xc420018550, 0x7f6a6451c000, 0x1)
	/tmp/go-fuzz-build843731397/gopath/src/github.com/gortc/stun/errorcode.go:55 +0xed
github.com/gortc/stun.FuzzSetters(0x7f6a6451c000, 0x1, 0x200000, 0x3)
	/tmp/go-fuzz-build843731397/gopath/src/github.com/gortc/stun/fuzz.go:97 +0x33c
go-fuzz-dep.Main(0x517548)
	/tmp/go-fuzz-build843731397/goroot/src/go-fuzz-dep/main.go:49 +0xde
main.main()
	/tmp/go-fuzz-build843731397/gopath/src/github.com/gortc/stun/go.fuzz.main/main.go:10 +0x2d

goroutine 17 [syscall, locked to thread]:
runtime.goexit()
	/tmp/go-fuzz-build843731397/goroot/src/runtime/asm_amd64.s:2197 +0x1
exit status 2